--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "symfony/yaml": "^4.2"
+        "symfony/yaml": "^4.2",
+        "spatie/array-to-xml": "^2.8"
     },
     "autoload": {
         "psr-4": {
